# Otterus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pch.h
OTTERUS_CORE/: CMakeLists.txt
OTTERUS_CORE/include/Core/Resources/: AssetManager.h  ResourceManager.h
OTTERUS_CORE/include/Core/Systems/: TransformSystem.h
OTTERUS_CORE/include/ECS/: Entity.h  Entity.inl  Registry.h  Registry.inl
OTTERUS_CORE/include/ECS/Components/: Identification.h  TransformComponent.h
OTTERUS_CORE/src/: AssetManager.cpp  Entity.cpp  Registry.cpp  ResourceManager.cpp  TransformSystem.cpp
OTTERUS_LOGGER/: CMakeLists.txt
OTTERUS_LOGGER/logger/: Logger.cpp  Logger.h
OTTERUS_RENDERING/: CMakeLists.txt
OTTERUS_RENDERING/include/Rendering/Buffers/: FrameBuffer.h
OTTERUS_RENDERING/include/Rendering/Core/: Camera.h  GraphicsEngine.h
OTTERUS_RENDERING/include/Rendering/Essentials/: Material.h  Mesh.h  MeshLoader.h  Shader.h  ShaderLoader.h  Texture.h  TextureLoader.h  Transform.h
OTTERUS_RENDERING/src/: Camera.cpp  FrameBuffer.cpp  GraphicsEngine.cpp  Mesh.cpp  MeshLoader.cpp  Shader.cpp  ShaderLoader.cpp  Texture.cpp  TextureLoader.cpp  Transform.cpp
OTTERUS_WINDOW/: CMakeLists.txt
OTTERUS_WINDOW/include/Input/: InputSystem.h
OTTERUS_WINDOW/include/Windowing/: Window.h
OTTERUS_WINDOW/include/event/: Dispatcher.h  Dispatcher.inl  Event.h
OTTERUS_WINDOW/include/event/keyboard/: KeyPressedEvent.h  KeyReleasedEvent.h
OTTERUS_WINDOW/include/event/mouse/: MouseButtonPressedEvent.h  MouseButtonReleasedEvent.h  MouseMovedEvent.h  MouseScrolledEvent.h
OTTERUS_WINDOW/include/event/window/: WindowCloseEvent.h  WindowResizeEvent.h
OTTERUS_WINDOW/src/: InputSystem.cpp  Window.cpp
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
editor/: Editor.cpp  Editor.h  IGame.h
editor/include/: Editor.h  IGame.h
editor/include/fbo/: FrameBuffer.h
editor/include/panels/: Panel.h  SceneHierarchyPanel.h  ViewPortPanel.h
editor/src/: Editor.cpp
editor/src/fbo/: FrameBuffer.cpp
editor/src/panels/: SceneHeirarchyPanel.cpp  ViewPortPanel.cpp
engine/: CMakeLists.txt
engine/entrypoint/: main.cpp
engine/include/camera/: Camera.h
engine/include/core/: Common.h  Core.h  Logger.h  base.h
engine/include/engine_context/: EngineContext.h
engine/include/entrypoint/: Application.h
engine/include/event/: Dispatcher.h  Dispatcher.inl  Event.h
engine/include/event/keyboard/: KeyPressedEvent.h  KeyReleasedEvent.h
engine/include/event/mouse/: MouseButtonPressedEvent.h  MouseButtonReleasedEvent.h  MouseMovedEvent.h  MouseScrolledEvent.h
engine/include/event/window/: WindowCloseEvent.h  WindowResizeEvent.h
engine/include/game_object/: GameObject.h
engine/include/input_system/: InputSystem.h
engine/include/resource_manager/: ResourceManager.h
engine/include/scene/: Scene.h
engine/include/types/: Type.h
engine/include/window/: Window.h
engine/src/camera/: Camera.cpp
engine/src/core/: Logger.cpp  base.cpp
engine/src/engine_context/: EngineContext.cpp
engine/src/entrypoint/: Application.cpp
engine/src/event/: Dispatcher.cpp
engine/src/game_object/: GameObject.cpp
engine/src/graphics/: FrameBuffer.cpp  GraphicsEngine.cpp  GraphicsEngine.h  Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  graphics.cpp  graphics.h
engine/src/input_system/: InputSystem.cpp
engine/src/loaders/: ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
engine/src/resource_manager/: ResourceManager.cpp
engine/src/scene/: Scene.cpp
engine/src/window/: Window.cpp
game/: App.cpp  Flores.cpp  Flores.h  main.cpp
game/assets/cube/: Cube.mtl
game/core/: Flores.cpp  Flores.h
src/: main.cpp
